--- a/spin.html
+++ b/spin.html
@@ -54,6 +54,22 @@
 									This model and its various extensions have been the object of study for the last 30 years.
 									This model views the message space as a term algebra. Term derivation rules specify how
 									agents can obtain new terms from old ones
+
+									There are various ways of presenting the terms under consideration in the Dolev-Yao
+									model. One way is to present a term grammar with a derivation system for deriving new
+									terms
+
+									Another way to present Dolev-Yao terms is using an equational theory.. In this
+									equational theory system, we will expand the signature to include destructors as well, and
+									then provide equations for when a term formed by application of multiple functions from
+									the signature might be equivalent to a smaller term.
+
+									true and false are 0-ary functions standing
+									for the boolean values true and false, which we require to ensure that the result of applying
+									a ver to a sign, for example, is also a term in our syntax.
+
+									hereafter：之后
+									
 									<hr />
 							</section>
 					</div>
