--- a/spin.html
+++ b/spin.html
@@ -69,9 +69,11 @@
 									a ver to a sign, for example, is also a term in our syntax.
 									<hr />
 
-									hereafter：之后
-
+									hereafter：之后；masquerade：冒充
+									forgery：伪造
 									<hr />
+									The notion of what messages an agent can construct at any given point of time is formalized by a “knowledge state”, which represents all the terms and assertions that each agent
+									knows. 
 							</section>
 					</div>
 
