--- a/spin.html
+++ b/spin.html
@@ -74,6 +74,13 @@
 									<hr />
 									The notion of what messages an agent can construct at any given point of time is formalized by a “knowledge state”, which represents all the terms and assertions that each agent
 									knows. 
+									<hr>
+									Security properties are of two types – trace properties and equivalence properties. Trace
+									properties are those which can be defined for each run of the protocol. A protocol is said to
+									satisfy such a property if every valid run of the protocol satisfies the property. Equivalence
+									properties are those which, if satisfied, mean that the adversary cannot distinguish between
+									two processes. Equivalence properties, therefore, require the inspection of multiple runs of
+									both processes under consideration, unlike trace properties.
 							</section>
 					</div>
 
