--- a/spin.html
+++ b/spin.html
@@ -81,7 +81,21 @@
 									properties are those which, if satisfied, mean that the adversary cannot distinguish between
 									two processes. Equivalence properties, therefore, require the inspection of multiple runs of
 									both processes under consideration, unlike trace properties.
-							</section>
+									<hr>
+									we believe we have  achieved  promis- ing success:  in all cases, we seem to have done as well or better than other tools.In order to facilitate com- parison between the various tools and approaches, we have focussed on protocols that have been analyzed by others. We are also analyzing newer protocols, in hopes of reporting new  discoveries not already uncovered by previous researchers.
+									<hr>
+									More specifically: we shall use the notation wp(S, R),
+									where S denotes a statement list and R some condition
+									on the state of the system, to denote the weakest precondition
+									for the initial state of the system such that
+									activation of S is guaranteed to lead to a properly
+									terminating activity leaving the system in a final state
+									satisfying the post-condition R. Such a wp--which is
+									called "a predicate transformer" because it associates a
+									pre-condition to any post-condition R--has, by definition,
+									the following properties.
+									<hr>
+								</section>
 					</div>
 
 		
