--- a/spin.html
+++ b/spin.html
@@ -95,6 +95,7 @@
 									pre-condition to any post-condition R--has, by definition,
 									the following properties.
 									<hr>
+									As an example of the derivation of XXX we shall dericve a XX for XX 
 								</section>
 					</div>
 
