--- a/spin.html
+++ b/spin.html
@@ -96,6 +96,11 @@
 									the following properties.
 									<hr>
 									As an example of the derivation of XXX we shall dericve a XX for XX 
+									<hr>
+									<span class="image fit"><img src="images/explicity-state.jpeg" alt="" /></span>
+									<hr>
+									<span class="image fit"><img src="images/explicity-state2.jpg" alt="" /></span>
+
 								</section>
 					</div>
 
