--- a/paper.html
+++ b/paper.html
@@ -99,7 +99,7 @@
 									<hr>
 									<span class="image fit"><img src="images/explicity-state.jpeg" alt="" /></span>
 									<hr>
-									<span class="image fit"><img src="images/explicity-state2.jpg" alt="" /></span>
+									<span class="image fit"><img src="images/explicity-state2.jpeg" alt="" /></span>
 
 								</section>
 					</div>
