--- a/dafny.html
+++ b/dafny.html
@@ -482,6 +482,11 @@
 									<span class="date">Decemeber 30, 2020</span>
 									<h1>Verifying iterative and recursive programs</h1>
 								</header>
+								<h3>Initial difficulties</h3>
+								Int – nat – real –bool; array<br>
+								Array的类型是引用类型，一个指针指向数组元素存储的堆分配区<br>
+								Seq的类型是值类型，不变，对Array进行切片产生Seq。<br>
+
 							</secition>
 					</div>
 			</div>
