--- a/dafny.html
+++ b/dafny.html
@@ -486,7 +486,7 @@
 								Int – nat – real –bool; array<br>
 								Array的类型是引用类型，一个指针指向数组元素存储的堆分配区<br>
 								Seq的类型是值类型，不变，对Array进行切片产生Seq。<br>
-
+								Inv ≡ 0 ≤ n ≤ 𝑁 ∧ 𝑥 = (∑i:𝑛 ≤ i<𝑁:𝑉[𝑖])<br>
 							</secition>
 					</div>
 			</div>
