--- a/dafny.html
+++ b/dafny.html
@@ -487,6 +487,11 @@
 								Array的类型是引用类型，一个指针指向数组元素存储的堆分配区<br>
 								Seq的类型是值类型，不变，对Array进行切片产生Seq。<br>
 								Inv ≡ 0 ≤ n ≤ 𝑁 ∧ 𝑥 = (∑i:𝑛 ≤ i<𝑁:𝑉[𝑖])<br>
+								<span class="image fit"><img src="images/dafny1.png" alt="" /></span><br>
+								<span class="image fit"><img src="images/dafny2.png" alt="" /></span><br>
+								<h3>Haskell</h3>
+								<span class="image fit"><img src="images/dafny3.png" alt="" /></span><br>
+
 							</secition>
 					</div>
 			</div>
