--- a/dafny.html
+++ b/dafny.html
@@ -491,6 +491,12 @@
 								<span class="image fit"><img src="images/dafny2.png" alt="" /></span><br>
 								<h3>Haskell</h3>
 								<span class="image fit"><img src="images/dafny3.png" alt="" /></span><br>
+								Dafny不能证明这个结果<br>
+								Sum(v[..n])+v[n] = Sum(v[..n+1])<br>
+								需要提供证明-lemma。Lemma是ghost method，仅用来验证<br>
+								<span class="image fit"><img src="images/dafny4.png" alt="" /></span><br>
+								<span class="image fit"><img src="images/dafny5.png" alt="" /></span><br>
+								<span class="image fit"><img src="images/dafny6.png" alt="" /></span><br>
 
 							</secition>
 					</div>
