--- a/dafny.html
+++ b/dafny.html
@@ -497,6 +497,11 @@
 								<span class="image fit"><img src="images/dafny4.png" alt="" /></span><br>
 								<span class="image fit"><img src="images/dafny5.png" alt="" /></span><br>
 								<span class="image fit"><img src="images/dafny6.png" alt="" /></span><br>
+								<h3>take negative into zero</h3>
+								<span class="image fit"><img src="images/dafny7.png" alt="" /></span><br>
+								old（e）用来进入method时e的值<br>
+								<span class="image fit"><img src="images/dafny8.png" alt="" /></span><br>
+
 
 							</secition>
 					</div>
