--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Dec 7, 2020</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<span class="date">Decemeber 7, 2020</span>
+									<h2><a href="#">Daily study<br />
+									record</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
@@ -70,12 +70,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
+										<span class="date">Decemeber 7, 2020</span>
+										<h2><a href="#">Dafny<br />
 										ipsum faucibus</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="dafny.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>A  tutorials of Dafny and the PHD. Paper 《Verifying Algorithms and Data Structures in Dafny》</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
