--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<h2><a href="#">Dafny<br />
 										ipsum faucibus</a></h2>
 									</header>
-									<a href="dafny.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="dafny.html" class="image fit"><img src="images/dafny.jpg" alt="" /></a>
 									<p>A  tutorials of Dafny and the PHD. Paper 《Verifying Algorithms and Data Structures in Dafny》</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
