--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 								<article>
 									<header>
 										<span class="date">Decemeber 7, 2020</span>
-										<h2><a href="#">Dafny<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Dafny</a></h2>
 									</header>
 									<a href="dafny.html" class="image fit"><img src="images/dafny.jpg" alt="" /></a>
 									<p>A  tutorials of Dafny and the PHD. Paper 《Verifying Algorithms and Data Structures in Dafny》</p>
