--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<a href="dafny.html" class="image fit"><img src="images/dafny.jpg" alt="" /></a>
 									<p>A  tutorials of Dafny and the PHD. Paper 《Verifying Algorithms and Data Structures in Dafny》</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="dafny.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
