--- a/paper.html
+++ b/paper.html
@@ -100,7 +100,7 @@
 									<span class="image fit"><img src="images/explicity-state.jpeg" alt="" /></span>
 									<hr>
 									<span class="image fit"><img src="images/explicity-state2.jpeg" alt="" /></span>
-
+									在数学里，海廷代数（Heyting algebra）是一特殊的偏序集，经由广义化布尔代数而成，得名于阿兰德·海廷。海廷代数是作为直觉主义逻辑的模型而产生的，是一种排中律不总是成立的逻辑。完全海廷代数是无点拓扑学的核心。
 								</section>
 					</div>
 
