--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 							<li><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
 							<li><a href="paper.html">Paper</a></li>
+							<li><a href="MTSs.html">MTSs</a></li>
+
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
