--- a/paper.html
+++ b/paper.html
@@ -29,6 +29,8 @@
 							<li><a href="dafny.html">Dafny</a></li>
 							<li><a href="murphi.html">Murphi</a></li>
 							<li class="active"><a href="paper.html">Paper</a></li>
+							<li><a href="MTSs.html">MTSs</a></li>
+
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -101,6 +103,7 @@
 									<hr>
 									<span class="image fit"><img src="images/explicity-state2.jpeg" alt="" /></span>
 									在数学里，海廷代数（Heyting algebra）是一特殊的偏序集，经由广义化布尔代数而成，得名于阿兰德·海廷。海廷代数是作为直觉主义逻辑的模型而产生的，是一种排中律不总是成立的逻辑。完全海廷代数是无点拓扑学的核心。
+
 								</section>
 					</div>
 
