--- a/MTSs.html
+++ b/MTSs.html
@@ -52,9 +52,45 @@
 								<!-- Text stuff -->
 									<h2>Approximate Safety Properties in Metric Transition
                                         Systems</h2>
-                                    <h3>摘要</h3>
+                                    <h3>Abstract</h3>
                                     MTS是用于实时系统的定量验证。本文的工作点在于在MTSs进一步提升安全属性-验证在系统执行过程中没有不好的事发生。引入了一个距离临界值a在【0，1】，用来分析系统在多大程度上满足他的规约。然后提出了一个a-safety 属性，安全属性的定量扩展。然后通过闭包描述a-safety属性。给出了一个算法验证系统是否满足a-safety的属性
-                                    <pr>
+                                    <br>
+                                    <h3>Introduction</h3>
+                                    定量验证是学术界研究的一个重点。提出了MTSs的概念。MTSs的近似模拟。<br>
+                                    本文的目的是学习定量扩展和MTSs上安全属性的验证问题。<br>
+                                    介绍了LT属性的发展历史。定量验证发展推动了安全属性扩展到概率和多值环境。<br>
+                                    多值环境，基于海庭代数的LT属性验证问题。Li 介绍了概率TSs来处理失真信息。提出了概率TSs上的传统正则安全属性的验证方法。<br>
+                                    <h3>Preliminaries</h3>
+                                    介绍了符号的定义，以及 pseudometric 的定义，原子命题的计算V。度量迁移系统MTS的定义M=(S,->,s,AP,L)。命题距离pd和路径距离td。<br>
+                                    <h3>Safety properties in MTSs</h3>
+                                    <h4>Linear Distances </h4>
+                                    Tdf表示有限路径的相似度td<br>
+                                    MLT属性P的前缀：pref(P)。<br>
+                                    Linear distance表示为d(p1,p2)= sup inf td(o1,o2)<br>
+                                    线性距离不满足第二条度量属性<br>
+                                    通过relaxing trace inclusion 引入近似满足概念：如果Tr(M)和P的线性距离在a上有界，那么MTS M近似满足MLT属性P<br>
+                                    <h4>Approximate Safety Properties</h4>
+                                    在定量验证中，属性是安全或者非安全的。<br>
+                                    a-	safety属性P表示所有路径与P有一定距离包含一个坏前缀。<br>
+                                    0-	safety 属性P是传统的安全属性<br>
+                                    一个MTS M近似满足一个a-saferty 属性P ：Trf(M)不包含任何P的坏前缀<br>
+                                    <h4>Clousre Operator</h4>
+                                    经典安全属性可以定义在LT属性的闭包上。<br>
+                                    当两个迁移系统M1和M2，所有M1的路径在M2中，路径包含成立。<br>
+                                    Trace inclusion 提升到测量两个迁移系统的距离有多近<br>
+                                    属性的闭包操作：<br>
+                                    <h4>MTSs on PSEUDO-ULTRAMETRIC SPACES</h4>
+                                    经典属性：闭包的闭包等于闭包，经典满足关系是传递的。但是在pseudometric 空间是不成立的<br>
+                                    Pseudometric 和pseudo-ultrametric的不同？solved<br>
+                                    当a’<=a时，闭包a’的闭包a = 闭包a<br>
+                                    M’是系统的抽象设计，M是M’的细化。M’满足a-safety那么M也满足a-safety<br>
+
+                                    <h4>The verification of regular approximate safety properties</h4>
+                                    提供了算法来检测是否一个MTS满足a-safety 属性类->regular a-safety properties
+关键将regular a-safety 属性的验证规约到通过使用自动计理论的经典不变式属性
+
+非确定有限自动机用来检测正则安全属性的合法性，regular 安全属性的主要描述是所有的坏前缀构成regular 语言。这里扩展了NFAs，用来描述MTSs上的有限路径集。
+
 							</section>
 
 					</div>
